<package>
  <name>robot</name>
  <version>0.2.0</version>
  <description>
    Metapackage for drivers for the HCR robot. 
  </description>
  <author>Anatoly Kabakov</author>
  <maintainer email="anatoly.kabakov@mail.ru">Anatoly Kabakov</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/neato_robot</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>robot_node</run_depend>
  <run_depend>robot_navigation</run_depend>
  <export>
   <metapackage/>
  </export>
</package>
